webapp/src/components/goals/styles/goals.scss
@import '../../global-styles/vars/';
@import '../../global-styles/mixins/';

.goals {
  $b: &;

  @include size(100%);
  padding-left: 30px;
  overflow-y: auto;
}

.fab {
  $b: &;

  @include size(44px);
  @include flex();
  border-radius: 50%;
  position: fixed;
  right: 21px; bottom: 21px;
  transition: all .2s ease-in-out;

  &:hover {
    transition: all .2s ease-in-out;
  }

  &__icon {
    @include size(12px);
  }

  &--add {
    background-color: $blue-100;
    box-shadow: 0 1px 20px 3px rgba($blue-100, 0.4);

    &:hover {
      background-color: $blue-120;
      box-shadow: 0 1px 10px 3px rgba($blue-120, 0.4);
    }

    #{$b}__icon {
      fill: white;
    }
  }

  &--delete {
    background-color: $salmon;
    box-shadow: 0 1px 20px 3px rgba($salmon, 0.4);

    &:hover {
      $hoverColor: darken($salmon, 5%);
      background-color: $hoverColor;
      box-shadow: 0 1px 10px 3px rgba($hoverColor, 0.4);
    }

    #{$b}__icon {
      @include size();
      @include flex();
      font-size: 18px;
      color: white;
    }
  }
}

